Added ability to call functions from component

--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -23,40 +23,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cd209a13",
+   "execution_count": 3,
+   "id": "4ffc98d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cb(data):\n",
-    "    print(data[0] + \"10\")"
+    "x = 0\n",
+    "def increment(y):\n",
+    "    global x\n",
+    "    print(f\"Incrementing x by {y} to {x + y}\" )\n",
+    "    x = x + y\n",
+    "    print(f\"Returning {x}\")\n",
+    "    return x "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c9e88c4f-8423-4b96-b123-361b2778c67e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "show(7fe6cab4c160, self=<mypackage.widgets.sample.Sample object at 0x7fe6cab4b8b0>)"
+       "show(7f17172aeb80, self=<mypackage.widgets.sample.Sample object at 0x7f17380aeb50>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a66f75dd92a4aadbdf06acd61d16745",
+       "model_id": "83cc7dea1ba2465ba97ec84db36c132b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fe6cab4c160, self=<mypackage.widgets.sample.Sample object at 0x7fe6cab4b8b0>)))"
+       "LayoutWidget(Layout(show(7f17172aeb80, self=<mypackage.widgets.sample.Sample object at 0x7f17380aeb50>)))"
       ]
      },
      "metadata": {},
@@ -66,21 +71,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hya3\n",
-      "hya2\n",
-      "hya10\n"
+      "hya10\n",
+      "('hya', 'hwo', {'wow': 1})\n",
+      "hya10\n",
+      "('hya', 'hwo', {'wow': 1})\n",
+      "hya10\n",
+      "('hya', 'hwo', {'wow': 1})\n",
+      "hya10\n",
+      "('hya', 'hwo', {'wow': 1})\n",
+      "hya10\n",
+      "('hya', 'hwo', {'wow': 1})\n"
      ]
     }
    ],
    "source": [
-    "widget = Sample(lambda x: cb(x))\n",
-    "widget.show()"
+    "widget = Sample(cb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f7ea852",
+   "id": "420bafbf",
    "metadata": {},
    "outputs": [],
    "source": []
