Added documentation, simplified interface

--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -24,44 +24,44 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ffc98d4",
+   "id": "4e1e26fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = 0\n",
-    "def increment(y):\n",
+    "def increment():\n",
     "    global x\n",
-    "    print(f\"Incrementing x by {y} to {x + y}\" )\n",
-    "    x = x + y\n",
+    "    print(f\"Incrementing x to {x + 1}\" )\n",
+    "    x = x + 1\n",
     "    print(f\"Returning {x}\")\n",
     "    return x "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c9e88c4f-8423-4b96-b123-361b2778c67e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "show(7f17172aeb80, self=<mypackage.widgets.sample.Sample object at 0x7f17380aeb50>)"
+       "show(7fd422b722e0, self=<mypackage.widgets.sample.Sample object at 0x7fd422bb9e50>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83cc7dea1ba2465ba97ec84db36c132b",
+       "model_id": "2cb0e76a11b04ddf8e181122358fd0e4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7f17172aeb80, self=<mypackage.widgets.sample.Sample object at 0x7f17380aeb50>)))"
+       "LayoutWidget(Layout(show(7fd422b722e0, self=<mypackage.widgets.sample.Sample object at 0x7fd422bb9e50>)))"
       ]
      },
      "metadata": {},
@@ -71,27 +71,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hya10\n",
-      "('hya', 'hwo', {'wow': 1})\n",
-      "hya10\n",
-      "('hya', 'hwo', {'wow': 1})\n",
-      "hya10\n",
-      "('hya', 'hwo', {'wow': 1})\n",
-      "hya10\n",
-      "('hya', 'hwo', {'wow': 1})\n",
-      "hya10\n",
-      "('hya', 'hwo', {'wow': 1})\n"
+      "Incrementing x to 1\n",
+      "Returning 1\n",
+      "['46eeaf22-b965-4610-b9e4-6580f6ec0627']\n"
      ]
     }
    ],
    "source": [
-    "widget = Sample(cb)"
+    "widget = Sample(increment)\n",
+    "widget.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "420bafbf",
+   "id": "2ed17a47",
    "metadata": {},
    "outputs": [],
    "source": []
