--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4e1e26fc",
+   "id": "62c69c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,29 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c9e88c4f-8423-4b96-b123-361b2778c67e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "show(7fd422b722e0, self=<mypackage.widgets.sample.Sample object at 0x7fd422bb9e50>)"
+       "show(7fea26eb2220, self=<mypackage.widgets.sample.Sample object at 0x7fea26e3e760>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cb0e76a11b04ddf8e181122358fd0e4",
+       "model_id": "5ca2a205e2a343639a54fa40df821997",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fd422b722e0, self=<mypackage.widgets.sample.Sample object at 0x7fd422bb9e50>)))"
+       "LayoutWidget(Layout(show(7fea26eb2220, self=<mypackage.widgets.sample.Sample object at 0x7fea26e3e760>)))"
       ]
      },
      "metadata": {},
@@ -71,9 +71,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Incrementing x to 1\n",
-      "Returning 1\n",
-      "['46eeaf22-b965-4610-b9e4-6580f6ec0627']\n"
+      "Incrementing x to 5\n",
+      "Returning 5\n",
+      "Incrementing x to 6\n",
+      "Returning 6\n",
+      "Incrementing x to 7\n",
+      "Returning 7\n",
+      "Incrementing x to 8\n",
+      "Returning 8\n",
+      "Incrementing x to 9\n",
+      "Returning 9\n",
+      "Incrementing x to 10\n",
+      "Returning 10\n",
+      "Incrementing x to 11\n",
+      "Returning 11\n",
+      "Incrementing x to 12\n",
+      "Returning 12\n"
      ]
     }
    ],
@@ -85,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed17a47",
+   "id": "9328fe67",
    "metadata": {},
    "outputs": [],
    "source": []
