--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62c69c23",
+   "id": "1b40b55e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,29 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c9e88c4f-8423-4b96-b123-361b2778c67e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "show(7fea26eb2220, self=<mypackage.widgets.sample.Sample object at 0x7fea26e3e760>)"
+       "show(7fce807ec2e0, self=<mypackage.widgets.sample.Sample object at 0x7fce80835e80>)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ca2a205e2a343639a54fa40df821997",
+       "model_id": "a5921ded92d74336abccb6a0b4f72207",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fea26eb2220, self=<mypackage.widgets.sample.Sample object at 0x7fea26e3e760>)))"
+       "LayoutWidget(Layout(show(7fce807ec2e0, self=<mypackage.widgets.sample.Sample object at 0x7fce80835e80>)))"
       ]
      },
      "metadata": {},
@@ -71,6 +71,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Incrementing x to 1\n",
+      "Returning 1\n",
+      "Incrementing x to 2\n",
+      "Returning 2\n",
+      "Incrementing x to 3\n",
+      "Returning 3\n",
+      "Incrementing x to 4\n",
+      "Returning 4\n",
       "Incrementing x to 5\n",
       "Returning 5\n",
       "Incrementing x to 6\n",
@@ -82,11 +90,7 @@
       "Incrementing x to 9\n",
       "Returning 9\n",
       "Incrementing x to 10\n",
-      "Returning 10\n",
-      "Incrementing x to 11\n",
-      "Returning 11\n",
-      "Incrementing x to 12\n",
-      "Returning 12\n"
+      "Returning 10\n"
      ]
     }
    ],
@@ -98,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9328fe67",
+   "id": "acaafaad",
    "metadata": {},
    "outputs": [],
    "source": []
