--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -24,17 +24,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b40b55e",
+   "id": "6207bdbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 0\n",
-    "def increment():\n",
-    "    global x\n",
-    "    print(f\"Incrementing x to {x + 1}\" )\n",
-    "    x = x + 1\n",
-    "    print(f\"Returning {x}\")\n",
-    "    return x "
+    "y = 0\n",
+    "def increment(x):\n",
+    "    global y\n",
+    "    y = y + 1\n",
+    "    return  x + y"
    ]
   },
   {
@@ -46,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "show(7fce807ec2e0, self=<mypackage.widgets.sample.Sample object at 0x7fce80835e80>)"
+       "show(7fd526b91100, self=<mypackage.widgets.sample.Sample object at 0x7fd526b86220>)"
       ]
      },
      "execution_count": 4,
@@ -56,42 +54,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5921ded92d74336abccb6a0b4f72207",
+       "model_id": "c8144898b05a4ff09c88cdfb7492567f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fce807ec2e0, self=<mypackage.widgets.sample.Sample object at 0x7fce80835e80>)))"
+       "LayoutWidget(Layout(show(7fd526b91100, self=<mypackage.widgets.sample.Sample object at 0x7fd526b86220>)))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Incrementing x to 1\n",
-      "Returning 1\n",
-      "Incrementing x to 2\n",
-      "Returning 2\n",
-      "Incrementing x to 3\n",
-      "Returning 3\n",
-      "Incrementing x to 4\n",
-      "Returning 4\n",
-      "Incrementing x to 5\n",
-      "Returning 5\n",
-      "Incrementing x to 6\n",
-      "Returning 6\n",
-      "Incrementing x to 7\n",
-      "Returning 7\n",
-      "Incrementing x to 8\n",
-      "Returning 8\n",
-      "Incrementing x to 9\n",
-      "Returning 9\n",
-      "Incrementing x to 10\n",
-      "Returning 10\n"
-     ]
     }
    ],
    "source": [
@@ -101,8 +73,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "3c524c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widget.model.x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d22ec7e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget.model.x=110"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "acaafaad",
+   "id": "9786baad",
    "metadata": {},
    "outputs": [],
    "source": []
