--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "show(7fd526b91100, self=<mypackage.widgets.sample.Sample object at 0x7fd526b86220>)"
+       "show(7fb4869b4400, self=<mypackage.widgets.sample.Sample object at 0x7fb49c7f3e50>)"
       ]
      },
      "execution_count": 4,
@@ -54,12 +54,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8144898b05a4ff09c88cdfb7492567f",
+       "model_id": "f3512f352284489a842391a0bc08673e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fd526b91100, self=<mypackage.widgets.sample.Sample object at 0x7fd526b86220>)))"
+       "LayoutWidget(Layout(show(7fb4869b4400, self=<mypackage.widgets.sample.Sample object at 0x7fb49c7f3e50>)))"
       ]
      },
      "metadata": {},
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "3c524c3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(150, 12)"
+       "(75, 15)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,18 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d22ec7e2",
+   "execution_count": 11,
+   "id": "97cf3210",
    "metadata": {},
    "outputs": [],
    "source": [
-    "widget.model.x=110"
+    "widget.model.x=0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9786baad",
+   "id": "f744bff4",
    "metadata": {},
    "outputs": [],
    "source": []
