--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "show(7fb4869b4400, self=<mypackage.widgets.sample.Sample object at 0x7fb49c7f3e50>)"
+       "show(7f21a0ab9880, self=<mypackage.widgets.sample.Sample object at 0x7f21b00620d0>)"
       ]
      },
      "execution_count": 4,
@@ -54,12 +54,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3512f352284489a842391a0bc08673e",
+       "model_id": "9d19399fd72440cca32ee4495e55a47b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7fb4869b4400, self=<mypackage.widgets.sample.Sample object at 0x7fb49c7f3e50>)))"
+       "LayoutWidget(Layout(show(7f21a0ab9880, self=<mypackage.widgets.sample.Sample object at 0x7f21b00620d0>)))"
       ]
      },
      "metadata": {},
@@ -73,17 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3c524c3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(75, 15)"
+       "(1, 0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "97cf3210",
    "metadata": {},
    "outputs": [],
    "source": [
-    "widget.model.x=0"
+    "widget.model.x=10"
    ]
   },
   {
