--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -3,18 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ce530f60-16b9-41a3-8fb6-cf863c09d44e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b67d4847",
+   "id": "0b6f35e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,89 +12,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6207bdbf",
+   "execution_count": 2,
+   "id": "62c3e9a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = 0\n",
-    "def increment(x):\n",
-    "    global y\n",
-    "    y = y + 1\n",
-    "    return  x + y"
+    "def func(x):\n",
+    "    return x + 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c9e88c4f-8423-4b96-b123-361b2778c67e",
+   "execution_count": 3,
+   "id": "99b7d981",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "show(7f21a0ab9880, self=<mypackage.widgets.sample.Sample object at 0x7f21b00620d0>)"
+       "show(7f0d0f22aee0, self=<mypackage.widgets.sample.Sample object at 0x7f0d0f232b20>)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d19399fd72440cca32ee4495e55a47b",
+       "model_id": "a1d82e4b0959422f80ff06a7865e9649",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7f21a0ab9880, self=<mypackage.widgets.sample.Sample object at 0x7f21b00620d0>)))"
+       "LayoutWidget(Layout(show(7f0d0f22aee0, self=<mypackage.widgets.sample.Sample object at 0x7f0d0f232b20>)))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "2\n",
+      "4\n",
+      "3\n",
+      "6\n",
+      "12\n"
+     ]
     }
    ],
    "source": [
-    "widget = Sample(increment)\n",
-    "widget.show()"
+    "w = Sample(func)\n",
+    "w.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3c524c3d",
+   "execution_count": 10,
+   "id": "c91e7fcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 0)"
+       "24"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "widget.model.x, y"
+    "w.model.x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "97cf3210",
+   "execution_count": 5,
+   "id": "29ffedaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "widget.model.x=10"
+    "def func2(x):\n",
+    "    print(x)\n",
+    "    return x*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "25d6157c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.model.cb=func2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f744bff4",
+   "id": "b586e562",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,7 +144,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "3e4ce8a43f08eabac02128ee3c9ac4351173d9d9ba1b2bb92d069c84b1e9fe9e"
+    "hash": "9355ab689216fdeb90cd05e6bb2c57e4efea0fb312ca3a35a31ab7c36293ce3c"
    }
   }
  },
