--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mypackage import Sample"
+    "from mypackage import Sample\n",
+    "from mypackage.core.idom_loader import reload_bundle"
    ]
   },
   {
@@ -17,8 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def func(x):\n",
-    "    return x + 10"
+    "def func(x, y):\n",
+    "    return x + y"
    ]
   },
   {
@@ -30,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "show(7f0d0f22aee0, self=<mypackage.widgets.sample.Sample object at 0x7f0d0f232b20>)"
+       "show(7fcb601e3be0, self=<mypackage.widgets.sample.Sample object at 0x7fcb601d5550>)"
       ]
      },
      "execution_count": 3,
@@ -40,85 +41,38 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1d82e4b0959422f80ff06a7865e9649",
+       "model_id": "4fe13f7c390d4aefb1efa6b02f774240",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "LayoutWidget(Layout(show(7f0d0f22aee0, self=<mypackage.widgets.sample.Sample object at 0x7f0d0f232b20>)))"
+       "LayoutWidget(Layout(show(7fcb601e3be0, self=<mypackage.widgets.sample.Sample object at 0x7fcb601d5550>)))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "8\n",
-      "2\n",
-      "4\n",
-      "3\n",
-      "6\n",
-      "12\n"
-     ]
     }
    ],
    "source": [
+    "reload_bundle()\n",
     "w = Sample(func)\n",
     "w.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c91e7fcd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w.model.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "29ffedaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def func2(x):\n",
-    "    print(x)\n",
-    "    return x*2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "25d6157c",
+   "id": "e36168dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.model.cb=func2"
+    "w.model.x=1000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b586e562",
+   "id": "3fa5aa7b",
    "metadata": {},
    "outputs": [],
    "source": []
